@@ -1,3 +1,8 @@
+Thu Jul  7 17:55:05 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/testunit/test_parallel.rb (TestParallelWorker#teardown): wait
+	  the child process even if the communition pipe is broken.
+
 Thu Jul  7 15:44:42 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* encoding.c (rb_enc_set_index, rb_enc_associate_index): should
